# mobee

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.claude-shim  Makefile  README.md  docker-compose.claude-shim.yml  docker-compose.yml  flake.nix  v2-pay-bindform.js
.claude/skills/accept-and-pay/: SKILL.md
.claude/skills/buyer-diagnose/: SKILL.md
.claude/skills/buyer-status/: SKILL.md
.claude/skills/post-job/: SKILL.md
.claude/skills/run-buyer/: SKILL.md
.claude/skills/run-seller/: SKILL.md
.claude/skills/seller-diagnose/: SKILL.md
.claude/skills/seller-status/: SKILL.md
.claude/skills/seller-update/: SKILL.md
.claude/skills/verify-receipt/: SKILL.md
.claude/skills/wallet-ops/: SKILL.md
crates/mobee/: Cargo.toml
crates/mobee-core/: Cargo.toml
crates/mobee-core/equiv-step0/: baseline.jsonl  equivdiff.py  test_equivdiff.py
crates/mobee-core/examples/: equiv_step0_baseline.rs  equiv_step0_candidate.rs
crates/mobee-core/src/: announce.rs  authorize_pay.rs  budget.rs  buyer_fund.rs  collect.rs  contribution.rs  delivery.rs  delivery_git.rs  delivery_transport.rs  doctor.rs  durable.rs  engine.rs  episode.rs  event.rs  format.rs  gateway.rs  git_transport.rs  heartbeat.rs  home.rs  job_lifecycle.rs  kinds.rs  lib.rs  log.rs  payment.rs  payment_edge.rs  payment_send.rs  payment_wallet.rs  profile.rs  receipt.rs  runtime_guard.rs  seller.rs  seller_daemon.rs  seller_git.rs  seller_memory.rs  telemetry.rs  wallet.rs  wallet_ops.rs
crates/mobee-core/src/buyer/: client.rs  lifecycle.rs  lock.rs  mod.rs  protocol.rs  reservations.rs  signer.rs  store.rs  wallet_actor.rs
crates/mobee-core/src/driver/: acp.rs  acp_driver.rs  mock.rs  mod.rs
crates/mobee-core/src/node/: client.rs  lock.rs  mod.rs  protocol.rs  signer.rs  store.rs  wallet_actor.rs
crates/mobee-core/src/seller_daemon/: local_relay_it.rs  mod.rs  tests.rs
crates/mobee-core/src/seller_node/: ingester.rs  lock.rs  mod.rs  outbox.rs  roster.rs  signer.rs  store.rs  wallet_actor.rs
crates/mobee-core/tests/: collect_integrity.rs  relay_git_http_auth.rs
crates/mobee-core/tests/git_http_fixture/: mod.rs
crates/mobee-evals/: Cargo.toml
crates/mobee-evals/scenarios/: failed-turn.json  happy-path-artifact.json  no-terminal.json  permission-mix.json
crates/mobee-evals/snapshots/: failed-turn.json  happy-path-artifact.json  no-terminal.json  permission-mix.json
crates/mobee-evals/src/: lib.rs
crates/mobee-evals/tests/: evals.rs
crates/mobee/examples/: mock-script.json
crates/mobee/src/: accept_cli.rs  agent_presets.rs  buyer.rs  cli.rs  collect_cli.rs  doctor.rs  exec.rs  main.rs  mcp.rs  node.rs  profile_cli.rs  sell.rs  stub_pay_cli.rs  wallet_cli.rs
crates/mobee/tests/: cli_e2e.rs
docker/: .gitignore  README.md  seller.env.example
docs/: DEPLOYMENT.md  DOCKER.md  ONBOARDING.md  QUICKSTART.md  README.md  SELLER-QUICKSTART.md  V2-OPERATOR-QUICKSTART.md  protocol.md
docs/img/src/: doc-map.html  packaging.html  trade-lifecycle.html
docs/meta/: CROSSBIND-PREPAY-TOOTH.md  DEV-UX-SHAPE.md  GOOSE.md  PIECE-10-FREELANCE-PR-DELIVERY.md  PIECE-11-CLAIM-LIFECYCLE.md  PIECE-12-TYPED-DELIVERY-ABSTRACTION.md  PIECE-13-SELLER-MEMORY.md  PIECE-14-JOB-A-STOP.md  PIECE-14-PAYMENT-FLOW.md  PIECE-6-PAYMENT-SM.md  PIECE-7-GIT-DELIVERY.md  PIECE-9-RECEIPT-AND-EXEC-METADATA.md  PROCESS.md  REBUILD-SEAM.md  RUNS-C2.md  SPIKE_LESSONS.md  STATE.md  USAGE-MATRIX-CPB.md
docs/skills/: accept-and-pay.md  announce.md  buyer-diagnose.md  buyer-status.md  buzz-announce.md  onboarding-glue.md  post-job.md  run-buyer.md  run-seller.md  seller-diagnose.md  seller-status.md  seller-update.md  verify-receipt.md  wallet-ops.md
docs/skills/harness-presets/: claude.md  codex.md  cursor.md
scripts/: mobee-buzz-sidecar.sh
scripts/gen_nostr_keypair/: Cargo.toml
scripts/gen_nostr_keypair/src/: main.rs
sinks/: buzz-announce.sh  discord-webhook.sh  slack-webhook.sh
src/: main.rs
web/network/: DEPLOY.md  config.js  index.html  package.json  styles.css
web/network/js/: app.js  jobs.js  kinds.js  parse.js  relay.js  store.js  views.js
web/network/scripts/: build.mjs  live-check.mjs
web/network/test/: jobs.test.mjs  kinds.test.mjs  package.json  parse.test.mjs  profiles.test.mjs  run-all.mjs
web/network/test/fixtures/: events.json  profiles.json
