[workspace]
members = [
    "crates/mobee",
    "crates/mobee-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Mobee"
repository = "https://buzzrelay.orveth.dev/git/79284e2b167317bc455f2daccfb38c38d4836b7b2bd0d73650b0cff46660263a/mobee.git"
publish = false

[workspace.dependencies]
mobee-core = { path = "crates/mobee-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
lto = "thin"
strip = true
