[package]
name = "mobee-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
acp = []
gateway = ["dep:nostr-sdk"]
git-delivery = []
wallet = ["git-delivery", "gateway", "dep:cashu", "dep:cdk", "dep:cdk-sqlite", "dep:nostr-sdk", "tokio/sync", "tokio/time"]
test-support = []

[dependencies]
cashu = { version = "=0.17.2", optional = true }
cdk = { version = "=0.17.2", default-features = false, features = ["wallet"], optional = true }
cdk-sqlite = { version = "=0.17.2", optional = true }
getrandom = "0.3"
hex = "0.4.3"
nostr-sdk = { version = "0.44.1", features = ["nip59"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tokio = { version = "1.52.0", default-features = false, features = ["rt", "macros"] }
toml = "0.8"

[dev-dependencies]
async-trait = "0.1.89"
cdk-sqlite = "=0.17.2"
tokio = { version = "1.52.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
url = "2.5.8"
uuid = "1.23.5"
