[package]
name = "mobee"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["wallet"]
acp = ["mobee-core/acp"]
wallet = ["mobee-core/wallet"]

[dependencies]
mobee-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
