[package]
name = "mobee"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["wallet"]
acp = ["mobee-core/acp"]
wallet = ["mobee-core/wallet", "dep:git2"]

[dependencies]
mobee-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
# Read-only materialization of a paid delivery from the buyer store (get_result). Local bare-repo
# reads only — no transport — so the workspace's default-features-off git2 (no openssl) suffices.
git2 = { workspace = true, optional = true }
